--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -45,12 +45,12 @@
   --light-grey: #222;
   --nav: #000;
   --nav-contrast: #000;
-  --white: #222;
+  --white: #232323;
   --dark-grey: #fafafa;
   --body: #111;
   --body-50: rgba(17, 17, 17,.6);
   --transparent: rgba(17, 17, 17, 0);
-  --text: #eee;
+  --text: #d2d2d2;
   --hide-dark: none;
   --hide-light: unset;
   --gauze: rgba(0, 0, 0, 0.7);
